# drone_ekf

./: CMakeLists.txt  QUICKSTART.md  README.md  ROS_BEGINNER_GUIDE.md  SUMMARY.md  how_to_run_bag.md  package.xml
config/: drone_pose.rviz  ekf_params.yaml
launch/: ekf.launch  plotter.launch
scripts/: controller_frame_diagnostics.py  ekf_node.py  ekf_tuning_plotter_live.py  offline_controller_frame_probe.py  plotter.py  run_plotter_and_watch.sh
