<?xml version="1.0"?>
<package format="2">
  <name>drone_ekf</name>
  <version>0.1.0</version>
  <description>Extended Kalman Filter for drone sensor fusion</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <export></export>
</package>
